Ch03.11: Conséquence Point fixe #34
Ch03.11: Conséquence Point fixe #34

--- a/03_ResultatsFondamentaux.tex
+++ b/03_ResultatsFondamentaux.tex
@@ -950,6 +950,18 @@ Ce qui conclut notre démonstration.
 		\end{myrem}
 \end{proof}
 
+\begin{myrem}[Conséquences Point fixe]
+
+Grâce à ce théorème qui se base sur l'unique propriété de S, nous pouvons démontrer plein de choses comme:
+\begin{itemize}
+   \item HALT non-calculable
+   \item Le théorème de Rice
+   \item Le théorème de Hoare-Allison via la démonstration de HALT non-calculable
+\end{itemize}
+Le théorème du point fixe c'est la base de la calculabilité. Il fixe toutes les limites de la calculabilité.
+ 
+\end{myrem}
+
 \begin{myrem}[Démonstration du théorème de Rice grâce au point fixe]
   À l'aide du point fixe, on peut démontrer plus simplement le théorème de Rice:
 
