--- a/02_Concepts.tex
+++ b/02_Concepts.tex
@@ -233,6 +233,13 @@ Cette liste doit contenir tous les éléments de cet ensemble, sans répétition
   \end{proof}
 \end{myexem}
 
+\begin{myexercice} \label{exerc:ensembleEnumNumAlgebrique}
+% Enoncé de l'exercice
+Un nombre réel x est appelé algébrique si x est la racine d'un polynôme d'équation\\
+\indent $a_0 + a_1x + a_2x^2 + ... + a_nx^n$.  avec $a_i$ entier\\
+Démontrer que x est énumérable.
+\end{myexercice}
+
 \subsection{Propriétés}
 \label{subsec:proprietes}
 
