Solution exercice ensembleEnumNumAlgebrique
Solution exercice ensembleEnumNumAlgebrique

--- a/88_SolutionsExercices.tex
+++ b/88_SolutionsExercices.tex
@@ -23,6 +23,14 @@
 %------------------------------------------------------
 \section{Concepts}
 
+ \solexercice{exerc:ensembleEnumNumAlgebrique}
+ Posons $E_k$ l'ensemble des nombres algébriques qui satisfont le polynôme:\\
+   $a_0 + a_1x + a_2x^2 + ... + a_nx^n$. avec n<k et max($|c_j|$) < k.\\
+ Il existe au plus $k^k$ polynômes de cette forme,
+et chacun a au plus k racines.\\
+Donc $E_k$ est un ensemble fini ayant au plus $k^{k+1}$ éléments. Ainsi nous listons les nombres algébriques $E_1, E_2, E_3, E_4$ et retirons les répétitions et obtenons une nouvelle ensemble qui est enumerable.
+ 
+ 
  \solexercice{exerc:conceptfct}
 % Solution de l'exercice
 
