--- a/02_Concepts.tex
+++ b/02_Concepts.tex
@@ -474,6 +474,12 @@ L'ensemble des fonctions de $\N$ vers $\{0,1\}$ est-il énumérable ?
 
 % subsection cantor (end)
 
+\begin{myexercice} \label{exerc:ensembleNonEnumNumTranscendantaux}
+% Enoncé de l'exercice
+Un nombre réel x est appelé transcendantaux si x n'est pas algébrique. (Un nombre réel x est appelé algébriques si x est la racine d'un polynôme d'équation $a_0 + a_1x + a_2x^2 + ... + a_nx^n$.  avec $a_i$ entier).
+Démontrer que x est non-énumérable s'il est transcendantaux.
+\end{myexercice}
+
 \subsection{Au delà de l'énumérable}
 \label{subsec:au_dela_de_l_enumerable}
 On a d'abord parlé d'ensembles finis, ensuite nous avons introduit le concept d'infini
