Update Sol. ensembleNonEnumNumTranscendantaux
Update Sol. ensembleNonEnumNumTranscendantaux

--- a/88_SolutionsExercices.tex
+++ b/88_SolutionsExercices.tex
@@ -37,7 +37,7 @@ Donc $E_k$ est un ensemble fini ayant au plus $k^{k+1}$ éléments. Ainsi nous l
 
 \solexercice{exerc:ensembleNonEnumNumTranscendantaux}
 Soit A l’ensemble des nombres algébriques et T l’ensemble des nombres transcendantaux.\\
-Notons que l'ensemble $R = A \cup T$ et A est énumérable. Si T étais énumérables, alors R serait l’union de deux ensembles énumérables. Puisque R est non-énumerable, par conséquent, T est non-enumerable cas s'il etais R serait énumerable.
+Notons que l'ensemble $R = A \cup T$ et A est énumérable. Si T étais énumérables, alors R serait l’union de deux ensembles énumérables. Puisque R est non-énumérable, par conséquent, T est non-énumérable cas s'il etais R serait énumérable.
 
 %------------------------------------------------------
 \section{Resultats Fondamentaux}
