Fix Travis CI builds

--- a/calculabilite_INGI1123.tex
+++ b/calculabilite_INGI1123.tex
@@ -20,11 +20,11 @@
 
 \input{03_ResultatsFondamentaux}
 
-\input{04_modeles}
+\input{04_Modeles}
 
 \input{05_Analyse}
 
-\input{06_complexite}
+\input{06_Complexite}
 
 \input{07_ClassesComplexite}
 
@@ -32,7 +32,7 @@
 
 %==========================================
 
- \bibliographystyle{plain}
- \bibliography{99_biblioINGI1123}
+\bibliographystyle{plain}
+\bibliography{99_biblioINGI1123}
 
 \end{document}
