--- a/00_Title.tex
+++ b/00_Title.tex
@@ -35,8 +35,7 @@
 
 	\sffamily
 
-   % \hfill  \includegraphics{Images/logo_UCL.jpg}	
-   \hfill  \includegraphics[scale=0.3]{Images/UCLouvain_logo2.png}	
+  \hfill  \includegraphics[scale=0.3]{Images/UCLouvain_logo.png}	
 	
 	\centering % Centre everything on the title page
 	
