--- a/04_modeles.tex
+++ b/04_modeles.tex
@@ -1327,7 +1327,7 @@ $$\begin{array}{lll}
 	2 & \Leftrightarrow & \lambda f \lambda c (f(fc))\\
 	... & &
 \end{array}$$
-Ainsi, en utilistant la règle de réduction, si N est la représentation d'un entier.\\
+Ainsi, en utilisant la règle de réduction, si \(N\) est la représentation d'un entier.\\
 \begin{center}
 	\begin{tabular}{ll}
 		(Na) & fonction à un paramètre de la forme\\
