--- a/04_modeles.tex
+++ b/04_modeles.tex
@@ -1340,7 +1340,7 @@ Ainsi, en utilisant la règle de réduction, si \(N\) est la représentation d'u
 	Si \(M\) et \(N\) sont les représentations de deux nombres entiers
 \end{myprop}
 \[\begin{array}{ll}
-	[M + N] &\Leftrightarrow \lambda a \lambda b ((Ma) ((Na) b)) \\
+	[M + N] &\iff \lambda a \lambda b ((Ma) ((Na) b)) \\
 	+ & \iff \lambda M \lambda N \lambda a \lambda b ((Ma) ((Na) n))
 \end{array}\]
 \begin{myexercice}\label{exerc:reduire12}
