--- a/03_ResultatsFondamentaux.tex
+++ b/03_ResultatsFondamentaux.tex
@@ -544,7 +544,7 @@ On suppose \textit{interpret} calculable dans Q.
 \end{myprop}
 
 \begin{myprop}
-	Dans un langage de programmation, il est donc impossible que
+	Dans un langage de programmation non trivial, il est donc impossible que
 	l'interpréteur et la fonction halt puissent tous deux être programmés.
 \end{myprop}
 
