--- a/04_modeles.tex
+++ b/04_modeles.tex
@@ -42,7 +42,7 @@ Mais il en existe beaucoup d'autres.
 
 \subsection{Modèles de langage}
 \label{ssub:mod_le_de_langage}
-Un langage est défini pas une grammaire formelle. L'objectif est de modéliser
+Un langage est défini par une grammaire formelle. L'objectif est de modéliser
 une classe de langages. Le langage est alors soit un ensemble récursif, soit un
 ensemble récursivement énumérable.
 
