--- a/02_Concepts.tex
+++ b/02_Concepts.tex
@@ -377,7 +377,7 @@ On va montrer qu'il existe des ensembles non énumérables par diagonalisation. 
 				\[ d'=0.x_{00}'x_{11}'\dots x_{kk}'\dots \]
 				Où
                 $$x_{ii}'=5\text{ si }x_{ii}\neq 5\quad\text{et}\quad x_{ii}'=6\text{ si }x_{ii}= 5$$
-				On a toujours que cet élément $d'$ est un réel compris entre 0 et 1\footnote{De plus, puisqu'il ne contient que des $5$ et des $6$ il n'a qu'une écriture décimale, donc notre choix quant à l'écriture décimale n'a pas d'influence est il appartient forcément au tableau.}.
+				On a toujours que cet élément $d'$ est un réel compris entre 0 et 1\footnote{De plus, puisqu'il ne contient que des $5$ et des $6$ il n'a qu'une écriture décimale, donc notre choix quant à l'écriture décimale n'a pas d'influence et il appartient forcément au tableau.}.
 			\item Le nombre $d'$ est dans l'énumération, car $E$ est
 				énumérable (par hypothèse). Il existe donc $x_p=d'$,
 				\[ x_p=0.x_{p0}x_{p1}\dots x_{pp}\dots \]
